bpo-37409: fix builtin/importlib discrepancy for "from . import *" where no package exists

Relative imports use resolve_name to get the absolute target name,
which first seeks the current module's absolute package name from the globals:
If __package__ (and __spec__.parent) are missing then
as a hail mary it uses __name__, truncating the last segment if
the module is any submodule rather than a package __init__.py
(which it guesses from whether __path__ is defined).

The hail mary should fail if there is no parent package (top level modules),
if __name__ is uninformatively '__main__' (-m entry points), or both (scripts).
That is, if both __name__ has no subcomponents and the module does not seem
to be a package __init__ module.

(Bug silently used module as if package, aliasing unexpected objects.
Note importlib contained an unaffected alternative __import__ implementation.)